--- a/templates/courseware/courses.html
+++ b/templates/courseware/courses.html
@@ -24,7 +24,6 @@
         </ul>
       </div>
 
-      % if not user.is_authenticated():
       <div class="col-md-3">
         <div class="join-gymnasium">
           <div class="text-center">
@@ -38,19 +37,14 @@
 
               <div class="row">
                 <div class="col-md-12"></div>
-                <a class="gym-button col-md-6 col-md-offset-3" href="/register">
+                <a class="gym-button col-md-6 col-md-offset-3" href="#">
                   Sign up for an Account
                 </a>
               </div>
 
-              <p>or <a href="/login">Sign in</a>
+              <p>or <a href="#">Sign in</a>
             </section>
         </div>
-
-        % else
-          # right hand column content for when users are logged in
-
-        % endif
       </div>
     </div>
   </div>
